--- a/package.json
+++ b/package.json
@@ -21,22 +21,22 @@
     "lingui:extract": "lingui extract"
   },
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
     "@lingui/cli": "^4.11.1",
     "@lingui/swc-plugin": "^4.0.8",
     "@lingui/vite-plugin": "^4.11.1",
     "@mdx-js/rollup": "^3.0.1",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/node": "^20.14.9",
     "@types/randomstring": "^1.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/redux-logger": "^3.0.13",
     "@types/webextension-polyfill": "^0.10.7",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
     "@vitejs/plugin-react-swc": "^3.7.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.5.0",
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-react": "^7.34.3",
     "prettier": "^3.3.2",
@@ -46,6 +46,7 @@
     "rollup-preserve-directives": "^1.1.1",
     "terser": "^5.31.1",
     "typescript": "^5.5.2",
+    "typescript-eslint": "^7.14.1",
     "unplugin-icons": "^0.19.0",
     "vite-plugin-chunk-split": "^0.5.0",
     "wxt": "^0.18.10"
