--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "rollup-preserve-directives": "^1.1.1",
     "terser": "^5.31.1",
     "typescript": "^5.5.2",
-    "typescript-eslint": "^7.14.1",
+    "typescript-eslint": "8.0.0-alpha.41",
     "unplugin-icons": "^0.19.0",
     "vite-plugin-chunk-split": "^0.5.0",
     "wxt": "^0.18.11"
@@ -76,7 +76,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "redux-logger": "^3.0.6",
-    "thu-learn-lib": "^3.2.0",
+    "thu-learn-lib": "^3.2.1",
     "webextension-polyfill": "^0.12.0"
   }
 }
