--- a/package.json
+++ b/package.json
@@ -22,59 +22,60 @@
     "lingui:extract": "lingui extract"
   },
   "devDependencies": {
-    "@eslint/js": "^9.5.0",
-    "@lingui/cli": "^4.11.1",
+    "@eslint-react/eslint-plugin": "^1.9.1",
+    "@eslint/js": "^9.9.0",
+    "@lingui/cli": "^4.11.3",
     "@lingui/swc-plugin": "^4.0.8",
-    "@lingui/vite-plugin": "^4.11.1",
+    "@lingui/vite-plugin": "^4.11.3",
     "@mdx-js/rollup": "^3.0.1",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@types/eslint__js": "^8.42.3",
     "@types/mdx": "^2.0.13",
-    "@types/node": "^20.14.9",
+    "@types/node": "^22.2.0",
     "@types/randomstring": "^1.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/redux-logger": "^3.0.13",
     "@types/webextension-polyfill": "^0.10.7",
     "@vitejs/plugin-react-swc": "^3.7.0",
-    "eslint": "^9.5.0",
+    "eslint": "^9.9.0",
+    "eslint-config-flat-gitignore": "^0.1.8",
     "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-react": "^7.34.3",
-    "prettier": "^3.3.2",
+    "prettier": "^3.3.3",
     "randomstring": "^1.3.0",
     "remark-mdx-images": "^3.0.0",
     "remark-unwrap-images": "^4.0.0",
     "rollup-preserve-directives": "^1.1.1",
-    "terser": "^5.31.1",
-    "typescript": "^5.5.2",
-    "typescript-eslint": "8.0.0-alpha.41",
-    "unplugin-icons": "^0.19.0",
+    "terser": "^5.31.5",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "8.0.1",
+    "unplugin-icons": "^0.19.2",
     "vite-plugin-chunk-split": "^0.5.0",
-    "wxt": "^0.18.11"
+    "wxt": "^0.19.4"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@generouted/react-router": "^1.19.5",
-    "@iconify-json/fa6-solid": "^1.1.21",
-    "@lingui/core": "^4.11.1",
-    "@lingui/macro": "^4.11.1",
-    "@lingui/react": "^4.11.1",
-    "@mui/material": "^5.15.20",
-    "@reduxjs/toolkit": "^2.2.5",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@generouted/react-router": "^1.19.6",
+    "@iconify-json/fa6-solid": "^1.1.24",
+    "@lingui/core": "^4.11.3",
+    "@lingui/macro": "^4.11.3",
+    "@lingui/react": "^4.11.3",
+    "@mui/material": "^5.16.7",
+    "@reduxjs/toolkit": "^2.2.7",
     "classnames": "^2.5.1",
-    "compare-versions": "^6.1.0",
+    "compare-versions": "^6.1.1",
     "fake-parse5": "^0.0.1",
     "material-ui-popup-state": "^5.1.2",
     "notistack": "^3.0.1",
-    "proxy-memoize": "^3.0.0",
+    "proxy-memoize": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
     "react-iframe": "^1.8.5",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.24.0",
+    "react-router-dom": "^6.26.0",
     "redux-logger": "^3.0.6",
     "thu-learn-lib": "^3.2.1",
     "webextension-polyfill": "^0.12.0"
