--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@mdx-js/rollup": "^3.0.1",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
+    "@types/chrome": "^0.0.270",
     "@types/eslint__js": "^8.42.3",
     "@types/mdx": "^2.0.13",
     "@types/node": "^22.2.0",
@@ -37,7 +38,6 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/redux-logger": "^3.0.13",
-    "@types/webextension-polyfill": "^0.10.7",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "eslint": "^9.9.0",
     "eslint-config-flat-gitignore": "^0.1.8",
@@ -60,7 +60,7 @@
     "@lingui/core": "^4.11.3",
     "@lingui/macro": "^4.11.3",
     "@lingui/react": "^4.11.3",
-    "@mui/material": "next",
+    "@mui/material": "^6.0.0-beta.5",
     "@reduxjs/toolkit": "^2.2.7",
     "classnames": "^2.5.1",
     "compare-versions": "^6.1.1",
@@ -75,7 +75,6 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "redux-logger": "^3.0.6",
-    "thu-learn-lib": "^3.2.1",
-    "webextension-polyfill": "^0.12.0"
+    "thu-learn-lib": "^3.2.1"
   }
 }
