--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "wxt": "^0.19.4"
   },
   "dependencies": {
-    "@generouted/react-router": "^1.19.6",
     "@iconify-json/fa6-solid": "^1.1.24",
     "@lingui/core": "^4.11.3",
     "@lingui/macro": "^4.11.3",
@@ -73,8 +72,8 @@
     "react-error-boundary": "^4.0.13",
     "react-iframe": "^1.8.5",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.0",
     "redux-logger": "^3.0.6",
-    "thu-learn-lib": "^3.2.1"
+    "thu-learn-lib": "^3.2.1",
+    "wouter": "^3.3.1"
   }
 }
